--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@
 :root {
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #444444; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #040677; /* Color for headings, subheadings and title throughout the website */
+  --heading-color: #001f3f; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #1acc8d; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
@@ -34,10 +34,10 @@
 }
 
 .dark-background {
-  --background-color: #08005e;
+  --background-color: #001f3f;
   --default-color: #ffffff;
   --heading-color: #ffffff;
-  --surface-color: #0c0091;
+  --surface-color: #001f3f;
   --contrast-color: #ffffff;
 }
 
@@ -84,6 +84,22 @@ h6 {
   margin-right: -100px;
 }
 
+.botonesPrincipales {
+  display: flex;
+  justify-content: center;
+  background-color: var(--accent-color);
+  width: 200px;
+  border: none;
+  padding: 10px;
+  border-radius: 40px;
+  color: white;
+}
+
+.botonesPrincipales:hover {
+  transition: 0.5s;
+  background-color: #0c865b;
+}
+
 .byTuritFooter {
   font-family: var(--heading-font);
   color: var(--heading-color);
@@ -99,6 +115,11 @@ h6 {
   padding: 10px;
   border-radius: 40px;
   color: white;
+}
+
+.conocerMasServicios:hover {
+  transition: 0.5s;
+  background-color: #056839;
 }
 
 /* PHP Email Form Messages
@@ -190,7 +211,7 @@ h6 {
 /* Global Header on Scroll
 ------------------------------*/
 .scrolled .header {
-  --background-color: #10058c;
+  --background-color: #001f3f;
 }
 
 /*--------------------------------------------------------------
@@ -1017,9 +1038,6 @@ section,
 
 .about .content .read-more {
   background: var(--accent-color);
-  color: var(--contrast-color);
-  font-family: var(--heading-font);
-  font-weight: 500;
   font-size: 16px;
   letter-spacing: 1px;
   padding: 12px 24px;
@@ -1038,7 +1056,8 @@ section,
 }
 
 .about .content .read-more:hover {
-  background: color-mix(in srgb, var(--accent-color), transparent 20%);
+  transition: 0.5s;
+  background: #0c865b;
   padding-right: 19px;
 }
 
