--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -488,7 +488,7 @@ h6 {
 .footer .footer-top {
   padding-top: 50px;
   border-top: 1px solid
-    color-mix(in srgb, var(--default-color), transparent 90%);
+    color-mix(in srgb, var(--heading-color), transparent 90%);
 }
 
 .footer .footer-about .logo {
